examples/sample-app-k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vote
  labels:
    app.kubernetes.io/part-of: voting-app
